--- a/Blue Skies Media Queries.css
+++ b/Blue Skies Media Queries.css
@@ -4,11 +4,13 @@
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 999;
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+    z-index: 999;
   }
   .topnav.responsive .dropdown {float: none;}
   .topnav.responsive .dropdown-content {position: relative;}
@@ -16,6 +18,13 @@
     display: block;
     width: 100%;
     text-align: left;
+
+ h3 {
+      font-size: larger;
+    }
+ p {
+      font-size: larger;
+    }
   }
   @media (max-width: 900px){
     section h1{
@@ -39,7 +48,6 @@
 
   #macchina {
     width: 100%;
-    margin: auto;
-    margin-right: 10%;
+    margins: auto;
   }
 }
