--- a/Blue Skies Media Queries.css
+++ b/Blue Skies Media Queries.css
@@ -1,16 +1,19 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
+  .logo {
+    width: 100%;
+  height: auto;
+  }
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 999;
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
-    z-index: 999;
+
   }
   .topnav.responsive .dropdown {float: none;}
   .topnav.responsive .dropdown-content {position: relative;}
@@ -27,6 +30,12 @@
     }
   }
   @media (max-width: 900px){
+   .topnav {
+    width: 100%;
+    margin: auto;
+    position: relative;
+    z-index: 999;
+   }
     section h1{
       font-size: 2rem;
       text-align: center;
@@ -34,10 +43,17 @@
     section .text-container{
       flex-direction: column;
     }
+    .column {
+      flex-direction: column;
+      font-size: large;
+    }
+    .column > h5 {
+      margin-top: 100px;
+    }
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
@@ -48,6 +64,7 @@
 
   #macchina {
     width: 100%;
-    margins: auto;
-  }
+    margin-right: 30%;
+    margin-left: 70%;
+}
 }
