--- a/Blue Skies Media Queries.css
+++ b/Blue Skies Media Queries.css
@@ -1,25 +1,33 @@
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 900px) {
   .logo {
     width: 100%;
   height: auto;
   }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
   }
-  .topnav.responsive a {
-    float: none;
+  .topnav a.icon {
+    float: right;
     display: block;
-    text-align: left;
-
   }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {
+      display: block;
+      width: 100%;
+      text-align: left;
     text-align: left;}
 
  h3 {
@@ -43,32 +51,27 @@
     section .text-container{
       flex-direction: column;
     }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+    }
     .column {
+      width: 100%;
       flex-direction: column;
-      font-size: large;
+      font-size: larger;
     }
     .column > h2 {
       font-size: x-large;
     }
     .column > p {
-      font-size: x-large;
+      font-size: x-large;}
 
+      #macchina {
+        width: 100%;
+        margin-right: 30%;
+        margin-left: 70%;
     }
     }
 
-
-@media screen and (max-width: 750px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-
-  #macchina {
-    width: 100%;
-    margin-right: 30%;
-    margin-left: 70%;
-}
-}
+   
