--- a/Blue Skies Media Queries.css
+++ b/Blue Skies Media Queries.css
@@ -38,7 +38,11 @@
  p {
       font-size: larger;
     }
+  #macchina {
+    display:block;
+    margin:0 auto;
   }
+  
   @media (max-width: 900px){
    .topnav {
     width: 100%;
