--- a/foglio-stile.css
+++ b/foglio-stile.css
@@ -247,15 +247,17 @@ section {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+@media screen and (max-width: 750px){
+ display:block;
+ margin:0 auto;
+}
   }
-
+  
   .map {
     text-align: center;
   }
 
-  .google map {  
-  box-shadow: 10px 10px 5px rgb(223, 226, 227);
-  }
+
 
 footer{
  position: sticky;
