--- a/foglio-stile.css
+++ b/foglio-stile.css
@@ -243,14 +243,14 @@ section {
 
   }
 
-  #macchina {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.center {
+    display: flex;
+    justify-content: center;
+    width: 50%;
 @media screen and (max-width: 750px){
  display:block;
  margin:0 auto;
+    max-width: 700px;
 }
   }
   
