--- a/foglio-stile.css
+++ b/foglio-stile.css
@@ -1,274 +1,266 @@
 button{
-    background-color: #6897BB;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    padding: 10px;
-    font-size: large;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
-    margin-bottom: 10 px;
+  background-color: #6897BB;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 10px;
+  font-size: large;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 16px;
+  margin-bottom: 10 px;
 }
 button:hover {
-    background-color: #7166c7;
+  background-color: #7166c7;
 }
 .topnav {
-  overflow: hidden;
-  font-family: 'Josefin Sans', sans-serif;
-  background-color: transparent;
-  margin: auto;
-  width: 50%;
+overflow: hidden;
+font-family: 'Josefin Sans', sans-serif;
+background-color: transparent;
+margin: auto;
+width: 70%;
 }
 
 .topnav >.logo:hover {
-  background-color: transparent;
+background-color: transparent;
 }
 .topnav-header{
-  position: absolute;
-  margin: auto;
+position: absolute;
+margin: auto;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  font-family: 'Josefin Sans', sans-serif;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  margin: auto;
+float: left;
+display: block;
+font-family: 'Josefin Sans', sans-serif;
+color: black;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+margin: auto;
 }
 
 .active {
-  text-decoration: none;
-  color:black;
+text-decoration: none;
+color:black;
 }
 
 .topnav .icon {
-  display: none;
+display: none;
 }
 
 .dropdown {
-  float: left;
-  overflow: hidden;
+float: left;
+overflow: hidden;
 }
 
 .dropdown .dropbtn {
-  font-size: 17px;    
-  border: none;
-  outline: none;
-  color: black;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+font-size: 17px;    
+border: none;
+outline: none;
+color: black;
+padding: 14px 16px;
+background-color: inherit;
+font-family: inherit;
+margin: 0;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
 }
 
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  font-family: 'Josefin Sans', sans-serif;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+float: none;
+color: black;
+padding: 12px 16px;
+font-family: 'Josefin Sans', sans-serif;
+text-decoration: none;
+display: block;
+text-align: left;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #7c6dd3;
-  color: white;
+background-color: #7c6dd3;
+color: white;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
+background-color: #ddd;
+color: black;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+display: block;
 }
-   
+ 
 body{
-    background-color: whitesmoke;
-    color:black;
-    animation: fadeInAnimation ease 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+  background-color: whitesmoke;
+  color:black;
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 @keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-     }
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
 }
 body, html {
-    height: 120%;
-    margin: 0;
+  height: 120%;
+  margin: 0;
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("blueskieshome.png");
-    height: 50%;
-    display: flex;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("blueskieshome.png");
+  height: 50%;
+  display: flexbox;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 .hero-text {
-    text-align: center;
-    position: absolute;
-    font-family: yesevaone-regular;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
+  text-align: center;
+  position: relative;
+  font-family: yesevaone-regular;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 
-  .hero-text > p {
-    font-weight: 400;
-  }
+.hero-text > p {
+  font-weight: 400;
+}
 
-  .reveal{
-    position: relative;
-    transform: translateY(150px);
-    opacity: 0;
-    transition: 1s all ease;
-  }
-  
-  .reveal.active{
-    transform: translateY(0);
-    opacity: 1;
-  } 
-  
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease;
+}
+
+.reveal.active{
+  transform: translateY(0);
+  opacity: 1;
+} 
+
 h1{
-    font-family: "yesevaone-regular", serif;
-    text-align: center;
-    font-size: xx-large;
+  font-family: "yesevaone-regular", serif;
+  text-align: center;
+  font-size: xx-large;
 }
 h2 {
-    text-align: center;
-    font-family: "yesevaone-regular", serif; 
+  text-align: center;
+  font-family: "yesevaone-regular", serif; 
 }
 h3{
-  font-family: "yesevaone-regular", serif;
- font-size: larger;
+font-family: "yesevaone-regular", serif;
+font-size: larger;
 }
 
 p {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: larger;
-  width: 80%;
-  margin: auto;
+font-family: 'Josefin Sans', sans-serif;
+font-size: larger;
+width: 80%;
+margin: auto;
 }
 
 cite {
-  font-family: 'Josefin Sans', sans-serif;
+font-family: 'Josefin Sans', sans-serif;
 
 }
 hr{
-  margin: auto;
-  width: 50%;
+margin: auto;
+width: 50%;
 }
 
 .quote {
-  text-align: center;
-  margin-left: 50px;
-  margin-right: 50px;
+text-align: center;
+margin-left: 50px;
+margin-right: 50px;
 }
 section {
-  background-color: whitesmoke;
+background-color: whitesmoke;
 }
 .div1 {
-    font-size: xx-large;
-    font-style: italic;
+  font-size: xx-large;
+  font-style: italic;
 }
-  .row {
-    display: flex;
-  }
-  
-  .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    text-align: center;
-    background-color: whitesmoke;
-  }
-  .column > p {
-    font-family: 'Josefin Sans', sans-serif 
-  }
+.row {
+  display: flex;
+}
 
-  .column-images{
-    margin-top: 30px;
-    height: 40%;
-  }
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  background-color: whitesmoke;
+}
+.column > p {
+  font-family: 'Josefin Sans', sans-serif 
+}
 
-  .column button {
-    position: center;
-    background-color: #ec7575;
-    border-radius: 8px;
-  }
-  .column button:hover {
-    background-color: #d65b5f;
-    border-radius: 8px;
-  }
+.column-images{
+  margin-top: 30px;
+  height: 40%;
+}
 
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  .image {
-    background-image: url(Blue\ skies\ copertina\ chi\ siamo.png);
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+.column button {
+  position: center;
+  background-color: #ec7575;
+  border-radius: 8px;
+}
+.column button:hover {
+  background-color: #d65b5f;
+  border-radius: 8px;
+}
 
-  }
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 .center {
-    display: flex;
-    justify-content: center;
-    width: 50%;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 100%; }
 @media screen and (max-width: 750px){
- display:block;
- margin:0 auto;
-    max-width: 700px;
+.center {
+  display: flexbox;
+margin: 0 auto;
+max-width: 700px;
 }
-  }
-  
-  .map {
-    text-align: center;
-  }
+}
+
+.map {
+  text-align: center;
+}
 
 
 
 footer{
- position: sticky;
-    background-color: #6897BB;
-    border-top: 2px, #5c6fad;
-    color: white;
-    text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: medium;
-    padding-top: 20px;
-    padding-bottom: 10px;
+position: sticky;
+  background-color: #6897BB;
+  border-top: 2px, #5c6fad;
+  color: white;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: medium;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
-
