--- a/foglio-stile - documentazione.css
+++ b/foglio-stile - documentazione.css
@@ -1,266 +1,242 @@
 button{
-  background-color: #6897BB;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  padding: 10px;
-  font-size: large;
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 16px;
-  margin-bottom: 10 px;
+    background-color: #6897BB;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 10px;
+    font-size: large;
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 16px;
+    margin-bottom: 10 px;
 }
 button:hover {
-  background-color: #7166c7;
+    background-color: #7166c7;
 }
 .topnav {
-overflow: hidden;
-font-family: 'Josefin Sans', sans-serif;
-background-color: transparent;
-margin: auto;
-width: 70%;
+  overflow: hidden;
+  font-family: 'Josefin Sans', sans-serif;
+  background-color: transparent;
+  margin: auto;
+  width: 70%;
 }
 
 .topnav >.logo:hover {
-background-color: transparent;
+  background-color: transparent;
 }
 .topnav-header{
-position: absolute;
-margin: auto;
+  position: absolute;
+  margin: auto;
 }
 
 .topnav a {
-float: left;
-display: block;
-font-family: 'Josefin Sans', sans-serif;
-color: black;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-font-size: 17px;
-margin: auto;
+  float: left;
+  display: block;
+  font-family: 'Josefin Sans', sans-serif;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  margin: auto;
 }
 
 .active {
-text-decoration: none;
-color:black;
+  text-decoration: none;
+  color:black;
 }
 
 .topnav .icon {
-display: none;
+  display: none;
 }
 
 .dropdown {
-float: left;
-overflow: hidden;
+  float: left;
+  overflow: hidden;
 }
 
 .dropdown .dropbtn {
-font-size: 17px;    
-border: none;
-outline: none;
-color: black;
-padding: 14px 16px;
-background-color: inherit;
-font-family: inherit;
-margin: 0;
-}
-
-.dropdown-content {
-display: none;
-position: absolute;
-background-color: #f9f9f9;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-z-index: 1;
-}
-
-.dropdown-content a {
-float: none;
-color: black;
-padding: 12px 16px;
-font-family: 'Josefin Sans', sans-serif;
-text-decoration: none;
-display: block;
-text-align: left;
-}
-
-.topnav a:hover, .dropdown:hover .dropbtn {
-background-color: #7c6dd3;
-color: white;
-}
-
-.dropdown-content a:hover {
-background-color: #ddd;
-color: black;
-}
-
-.dropdown:hover .dropdown-content {
-display: block;
-}
- 
-body{
-  background-color: whitesmoke;
-  color:black;
-  animation: fadeInAnimation ease 3s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fadeInAnimation {
-  0% {
-      opacity: 0;
-  }
-  100% {
-      opacity: 1;
-   }
-}
-body, html {
-  height: 120%;
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
   margin: 0;
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("blueskieshome.png");
-  height: 50%;
-  display: flexbox;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
-.hero-text {
-  text-align: center;
-  position: relative;
-  font-family: yesevaone-regular;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  font-family: 'Josefin Sans', sans-serif;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #7c6dd3;
   color: white;
 }
 
-.hero-text > p {
-  font-weight: 400;
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-.reveal{
-  position: relative;
-  transform: translateY(150px);
-  opacity: 0;
-  transition: 1s all ease;
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+   
+body{
+    background-color: whitesmoke;
+    color:black;
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
-.reveal.active{
-  transform: translateY(0);
-  opacity: 1;
-} 
+body, html {
+    height: 120%;
+    margin: 0;
+}
 
+  .reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
+  
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  } 
+
+  @keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+  
 h1{
-  font-family: "yesevaone-regular", serif;
-  text-align: center;
-  font-size: xx-large;
+    font-family: "yesevaone-regular", serif;
+    text-align: center;
+    font-size: xx-large;
 }
 h2 {
-  text-align: center;
-  font-family: "yesevaone-regular", serif; 
+    text-align: center;
+    font-family: "yesevaone-regular", serif; 
 }
 h3{
-font-family: "yesevaone-regular", serif;
-font-size: larger;
+  text-align: center;
+  font-family: "yesevaone-regular", serif;
+  font-size: larger;
+}
+
+h4 {
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 p {
-font-family: 'Josefin Sans', sans-serif;
-font-size: larger;
-width: 80%;
-margin: auto;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: larger;
+  width: 80%;
+  margin: auto;
 }
 
-cite {
-font-family: 'Josefin Sans', sans-serif;
-
-}
 hr{
-margin: auto;
-width: 50%;
-}
-
-.quote {
-text-align: center;
-margin-left: 50px;
-margin-right: 50px;
-}
-section {
-background-color: whitesmoke;
-}
-.div1 {
-  font-size: xx-large;
-  font-style: italic;
-}
-.row {
-  display: flex;
-}
-
-.column {
-  float: left;
+  margin: auto;
   width: 50%;
-  padding: 10px;
-  text-align: center;
+}
+
+a{
+  font-family: 'Josefin Sans', sans-serif;
+  color: #d65b5f;
+  text-decoration: none;
+}
+
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+section {
   background-color: whitesmoke;
 }
-.column > p {
-  font-family: 'Josefin Sans', sans-serif 
-}
+.row {
+    display: flex;
+  }
+  
+ .column {
+    flex-direction: column;
+    float: left;
+    width: 50%;
+    padding: 10px;
+    column-gap: 1em;
+    text-align: center;
+    background-color: whitesmoke;
+  }
+  .column > p {
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: left;
+    font-weight: 300;
+  }
 
-.column-images{
-  margin-top: 30px;
-  height: 40%;
-}
-
-.column button {
-  position: center;
-  background-color: #ec7575;
-  border-radius: 8px;
-}
-.column button:hover {
-  background-color: #d65b5f;
-  border-radius: 8px;
-}
-
+  .column button {
+    position: center;
+    background-color: #ec7575;
+    border-radius: 8px;
+    margin: auto, 30px;
+  }
+  .column button:hover {
+    background-color: #d65b5f;
+    border-radius: 8px;
+  }
+  
 .row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+    content: "";
+    display: table;
+    clear: both;
+  }
+ 
+.doc {
+    background-image: url(Blue\ Skies\ Documentazione.png);
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 
-.diagram {
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  width: 100%; }
-@media screen and (max-width: 750px){
-.center {
-  display: flexbox;
-margin: 0 auto;
-max-width: 700px;
-}
-}
-
-.map {
-  text-align: center;
-}
-
-
+  }
 
 footer{
-position: sticky;
-  background-color: #6897BB;
-  border-top: 2px, #5c6fad;
-  color: white;
-  text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: medium;
-  padding-top: 20px;
-  padding-bottom: 10px;
+ position: sticky;
+    background-color: #6897BB;
+    border-top: 2px, #5c6fad;
+    color: white;
+    font-family:'Josefin Sans', sans-serif;
+    text-align: center;
+    font-size: medium;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
