--- a/foglio-stile - attività.css
+++ b/foglio-stile - attività.css
@@ -212,10 +212,11 @@ section {
   }
 
   .column-images{
+    display: flexbox;
+    margin: auto;
     margin-top: 30px;
     height: 30%;
   }
-
   .column button {
     position: center;
     background-color: #ec7575;
