--- a/foglio-stile-chisiamo.css
+++ b/foglio-stile-chisiamo.css
@@ -108,10 +108,6 @@ body{
     animation-fill-mode: forwards;
 }
 
-.dark-mode {
-  background-color: rgb(54, 54, 54);
-  color: white;}
-
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
@@ -165,7 +161,7 @@ h3{
 h4 {
   text-align: center;
   text-decoration: none;
-  font-family: "yesevaone-regular", serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 p {
