--- a/foglio-stile - Repertorio.css
+++ b/foglio-stile - Repertorio.css
@@ -108,9 +108,6 @@ body{
     animation-fill-mode: forwards;
 }
 
-.dark-mode {
-  background-color: rgb(54, 54, 54);
-  color: white;}
 
 @keyframes fadeInAnimation {
     0% {
@@ -124,28 +121,6 @@ body, html {
     height: 120%;
     margin: 0;
 }
-
-.hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("blueskieshome.png");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-.hero-text {
-    text-align: center;
-    position: absolute;
-    font-family: yesevaone-regular;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-
-  .hero-text > p {
-    font-weight: 400;
-  }
 
   .reveal{
     position: relative;
@@ -177,7 +152,7 @@ h3{
 h4 {
   text-align: center;
   text-decoration: none;
-  font-family: "yesevaone-regular", serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 p {
@@ -242,6 +217,7 @@ section {
     background-color: #ec7575;
     border-radius: 8px;
     margin: auto, 30px;
+      gap: 10px;
   }
   .column button:hover {
     background-color: #d65b5f;
