Update foglio-stile - Repertorio.css

--- a/foglio-stile - Repertorio.css
+++ b/foglio-stile - Repertorio.css
@@ -248,7 +248,7 @@ section {
   }
 
 .doc {
-    background-image: url(Blue\ Skies\ Documentazione.png);
+    background-image: url(Blue Skies Barca.png);
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
