Update foglio-stile - Repertorio.css

--- a/foglio-stile - Repertorio.css
+++ b/foglio-stile - Repertorio.css
@@ -248,9 +248,9 @@ section {
   }
 
 .doc {
-    background-image: url(Blue Skies Barca.png);
+    background-image: url(Blue\ Skies\ Barca.png);
     height: 50%;
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
